# ai-call-analyzer

./: README.md  analysis_report.json  analysis_report.txt  api.py  main.py  pyproject.toml  render.yaml  requirements.txt  sample_call.txt
static/: Styles.css  index.html
